# InnoEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Todo.txt  vcpkg.json
InnoEngine/: CMakeLists.txt
InnoEngine/src/: Application.cpp  Application.h  Asset.h  AssetManager.cpp  AssetManager.h  AssetRepository.h  AssetView.h  BaseTypes.h  DebugUI.cpp  DebugUI.h  GPUPipeline.cpp  GPUPipeline.h  ImGuiPipeline.cpp  ImGuiPipeline.h  Layer.h  Log.cpp  Log.h  ObjectPool.h  OrthographicCamera.cpp  OrthographicCamera.h  Profiler.cpp  Profiler.h  RenderCommandBuffer.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  SimpleAverageCalc.h  Sprite.cpp  Sprite.h  Sprite2DPipeline.cpp  Sprite2DPipeline.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h  iepch.h
InnoEngine/src/Shader/: SpriteBatch.vert.hlsl
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  Sandbox.h  main.cpp
assets/Shaders/DXIL/: SpriteBatch.vert.dxil
assets/Shaders/MSL/: SpriteBatch.vert.msl
assets/Shaders/SPIRV/: SpriteBatch.vert.spv
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StaticAnalyzers.cmake  Utility.cmake
sandbox_environment/Debug/: imgui.ini
sandbox_environment/assets/shaders/DXIL/: Circle.frag.dxil  CircleBatch.vert.dxil  Line.frag.dxil  LineBatch.vert.dxil  MSDFText2D.frag.dxil  MSDFText2DBatch.vert.dxil  QuadBatch.vert.dxil  SpriteBatch.vert.dxil
sandbox_environment/assets/shaders/MSL/: Circle.frag.msl  CircleBatch.vert.msl  Color.frag.msl  Line.frag.msl  LineBatch.vert.msl  MSDFText2D.frag.msl  MSDFText2DBatch.vert.msl  QuadBatch.vert.msl  SpriteBatch.vert.msl
sandbox_environment/assets/shaders/SPIRV/: Circle.frag.spv  CircleBatch.vert.spv  Color.frag.spv  Line.frag.spv  LineBatch.vert.spv  MSDFText2D.frag.spv  MSDFText2DBatch.vert.spv  QuadBatch.vert.spv  SpriteBatch.vert.spv
sandbox_environment/assets/shaders/meta/: MSDFText2DBatch.vert.json
scripts/: .gitignore  1 - vcpkg Setup.bat  Create MSVS + Clang.ps1  compile_shaders_for_sandbox.sh  setEnv.ps1.example  setup visual studio.ps1
src/: CMakeLists.txt
src/innoengine/: CMakeLists.txt
src/innoengine/InnoEngine/: Application.cpp  Application.h  Asset.Test.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetRepository.h  AssetView.h  BaseTypes.h  CoreAPI.h  DebugUI.cpp  DebugUI.h  Font.cpp  Font.h  Font2DPipeline.cpp  Font2DPipeline.h  GPUDeviceRef.h  IE_Assert.h  ImGuiPipeline.cpp  ImGuiPipeline.h  InputSystem.cpp  InputSystem.h  Layer.h  Log.cpp  Log.h  MSDFData.h  ObjectPool.h  OrthographicCamera.h  Profiler.cpp  Profiler.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SimpleAverageCalc.h  Sprite.cpp  Sprite.h  Sprite2DPipeline.cpp  (+7 more)
src/innoengine/InnoEngine/Shader/: GPUPipelineBase.verti.hlsl  MSDFText2D.frag.hlsl  MSDFText2DBatch.vert.hlsl  SpriteBatch.vert.hlsl
src/innoengine/InnoEngine/graphics/: Camera.h  CameraController.cpp  CameraController.h  DefaultCameraController.cpp  DefaultCameraController.h  Font.cpp  Font.h  GPUBatchBuffer.h  GPUDeviceRef.h  MSDFData.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  TextureBase.cpp  TextureBase.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
src/innoengine/InnoEngine/graphics/pipelines/: Font2DPipeline.cpp  Font2DPipeline.h  ImGuiPipeline.cpp  ImGuiPipeline.h  Primitive2DPipeline.cpp  Primitive2DPipeline.h  Sprite2DPipeline.cpp  Sprite2DPipeline.h
src/innoengine/InnoEngine/graphics/shader/: Circle.frag.cpp  Circle.frag.h  Circle.frag.hlsl  Circle.frag.idl  CircleBatch.vert.hlsl  Color.frag.hlsl  FragmentBase.fragi.hlsl  GPUPipelineBase.verti.hlsl  Line.frag.hlsl  LineBatch.vert.hlsl  MSDFText2D.frag.hlsl  MSDFText2DBatch.vert.hlsl  QuadBatch.vert.hlsl  SpriteBatch.vert.hlsl  TextureXColor.frag.hlsl  VertexBase.verti.hlsl
src/innoengine/InnoEngine/utility/: Log.cpp  ObjectPool.h  Profiler.cpp  Profiler.h  SimpleAverageCalc.h  StringArena.cpp  StringArena.h
src/sample/: CMakeLists.txt
src/sample/Sample/: Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  Enums.h  Ground.cpp  Ground.h  MainScene.cpp  MainScene.h  PlayerCameraController.cpp  PlayerCameraController.h  Sample.cpp  Sample.h  Structs.h  Turret.cpp  Turret.h  TurretFactory.cpp  TurretFactory.h  World.cpp  World.h  main.cpp
src/sandbox/: CMakeLists.txt
src/sandbox/Sandbox/: DemoScene.cpp  DemoScene.h  Sandbox.cpp  Sandbox.h  main.cpp
